// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResult should not render a non existent component 1`] = `""`;

exports[`MapDetailResult should render adressen ligplaats 1`] = `
<MapDetailAdressenLigplaats
  ligplaats={
    Object {
      "label": "value",
    }
  }
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen nummeraanduiding 1`] = `
<MapDetailAdressenVerblijfsobject
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  verblijfsobject={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render adressen openbareruimte 1`] = `
<MapDetailAdressenOpenbareRuimte
  openbareRuimte={
    Object {
      "label": "value",
    }
  }
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen pand 1`] = `
<MapDetailAdressenPand
  pand={
    Object {
      "label": "value",
    }
  }
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render adressen standplaats 1`] = `
<MapDetailAdressenStandplaats
  panoUrl="panoUrl"
  standplaats={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render adressen verblijfsobject 1`] = `
<MapDetailAdressenVerblijfsobject
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  verblijfsobject={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render explosieven gevrijwaard gebied 1`] = `
<MapDetailExplosievenGevrijwaardGebied
  gevrijwaardGebied={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render explosieven inslag 1`] = `
<MapDetailExplosievenInslag
  inslag={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render explosieven uitgevoerd onderzoek 1`] = `
<MapDetailExplosievenUitgevoerdOnderzoek
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  uitgevoerdOnderzoek={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render explosieven verdacht gebied 1`] = `
<MapDetailExplosievenVerdachtGebied
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  verdachtGebied={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden bouwblok 1`] = `
<MapDetailGebiedenBouwblok
  bouwblok={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden buurt 1`] = `
<MapDetailGebiedenBuurt
  buurt={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden gebiedsgericht-werken 1`] = `
<MapDetailGebiedenGebiedsgerichtWerken
  gebiedsgerichtWerken={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden grootstedelijk 1`] = `
<MapDetailGebiedenGrootstedelijk
  grootstedelijk={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render gebieden stadsdeel 1`] = `
<MapDetailGebiedenStadsdeel
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  stadsdeel={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden unesco 1`] = `
<MapDetailGebiedenUnesco
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  unesco={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render gebieden wijk 1`] = `
<MapDetailGebiedenWijk
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  wijk={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render kadastraal object 1`] = `
<MapDetailKadastraalObject
  kadastraalObject={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render meetbout 1`] = `
<MapDetailMeetbout
  meetbout={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render monument 1`] = `
<MapDetailMonument
  monument={
    Object {
      "label": "value",
    }
  }
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
/>
`;

exports[`MapDetailResult should render nap peilmerk 1`] = `
<MapDetailNapPeilmerk
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  peilmerk={
    Object {
      "label": "value",
    }
  }
/>
`;

exports[`MapDetailResult should render vestiging 1`] = `
<MapDetailVestiging
  onMaximize={[MockFunction]}
  panoUrl="panoUrl"
  vestiging={
    Object {
      "label": "value",
    }
  }
/>
`;
